[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "retico-sam"
dynamic = ["version"]
dependencies = [
    "retico-core>=2.0.0",
    "retico-vision @ git+https://github.com/retico-team/retico-vision.git",
    "torchvision>=0.8",
    "torch<2.9",
    "ultralytics>=8.0.0",
    "opencv-python>=4.0.0",
    "numpy<1.24",
]
authors = [
    {name = "Cheikh Lame", email = "cheikhlame@u.boisestate.edu"},
]
description = "A SAM object detection incremental module for the retico framework."
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "retico", 
    "framework", 
    "incremental", 
    "dialogue", 
    "dialog", 
    "object detection", 
    "sam",
    "fastsam",
    "segmentation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]